<?xml version="1.0"?>
<package format="2">
  <name>demo</name>
  <version>0.1.0</version>
  <description>22</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
